--- a/04_mixed_messages/index.html
+++ b/04_mixed_messages/index.html
@@ -10,12 +10,19 @@
     <h1>Mixed Messages</h1>
     <div class="container">
         <div>
-            <button class="nextquote" id="btn-inspire">Inspire Me</button>
+            <button class="nextquote" id="get-quote-btn">Inspire Me</button>
         </div>
         <div class="quote">
             <div class="quotemessage">
-                <h3>Keep your friends close, but your enemies closer.<br>The Godfather Part Ii</h3>
+                <h3>Keep your friends close, but your enemies closer.<br> ~~ The Godfather Part Ii</h3>
             </div>
+        </div>
+        <div>
+        <span style="z-index:50;font-size:0.9em;">
+            <img src="http://api.paperquotes.com/static/images/paperquotes.png" height="20" width="20" alt="paperquotes.com"/>
+            <a href="http://paperquotes.com" title="Powered by quotes from paperquotes.com" style="color: black; margin-left: 4px; vertical-align: middle;">Powered by quotes from paperquotes.com
+            </a>
+            </span>
         </div>
     </div>
     <script src="script.js"></script>
